<resources>
    <string name="app_name">任我停</string>
    <string name="app_version">V1.0.0</string>
    <string name="title_my">我的</string>
    <string name="title_reservation">预约停车</string>
    <string name="title_vicinity">附近停车</string>
    <string name="my_img">my_img</string>
    <string name="my_phone">180****8631</string>
    <string name="my_activity">活动</string>
    <string name="my_activity_detail">查看世间百态</string>
    <string name="my_head">头像</string>
    <string name="my_red">红包</string>
    <string name="my_discount">优惠</string>
    <string name="my_discount_detail">领取千万奖金</string>
    <string name="my_order">我的订单</string>
    <string name="my_all_order">查看全部订单</string>
    <string name="my_waited_pay">待付款</string>
    <string name="my_doing">进行中</string>
    <string name="my_cancel">已取消</string>
    <string name="my_success">已完成</string>
    <string name="my_app_setting">应用设置</string>
    <string name="my_security">账号与安全</string>
    <string name="my_chat">客服</string>
    <string name="my_setting">设置</string>
    <string name="my_advertise">广告</string>
    <string name="my_more">更多</string>
    <!--    setting details of mine page-->
    <string name="my_setting_title">设置</string>
    <string name="my_setting_address">常用地址</string>
    <string name="my_setting_road">实时路况</string>
    <string name="my_setting_clear">清除缓存</string>
    <string name="my_setting_cache">211M</string>
    <string name="my_setting_update">检查版本更新</string>
    <string name="my_setting_personal">关于隐私协议</string>
    <string name="my_setting_userP">关于用户协议</string>
    <string name="my_setting_user">用户指南</string>
    <string name="my_setting_us">关于任我停</string>
    <string name="my_setting_exit">退出登录</string>

    <!--    security details of mine page-->
    <string name="my_security_title">账号与安全</string>
    <string name="my_security_RealName">实名认证</string>
    <string name="my_security_RealNameStatus">未认证</string>
    <string name="my_security_SetPwd">设置登录密码</string>
    <string name="my_security_PwdStatus">去修改</string>
    <string name="my_security_SetPay">设置支付密码</string>
    <string name="my_security_PayStatus">未设置</string>
    <string name="my_security_NoPwd">微信免密支付</string>
    <string name="my_security_NoPwdStatus">未开启</string>
    <string name="my_security_NoPwdDetail">开启后，支付时无需输入密码或指纹</string>
    <string name="my_security_ChangePhone">修改手机号码</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vicinty_et_top">百万补贴优惠劵等您来体验</string>
    <string name="viniity_tip_wenzhi">left || </string>
    <string name="search_details_navigation">导航</string>
    <string name="reservation_buttom_home">家</string>
    <string name="reservation_buttom_company">公司</string>
    <string name="reservation_order_top_title">预约订单</string>
    <string name="reservation_order_buttom_reservation_now">立即预约</string>
    <string name="reservation_order_buttom_cancel_appointment">取消预约</string>
    <string name="order_pay_WX">微信支付</string>
    <string name="order_pay_ZFB">支付宝支付</string>

    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="login_not_user">没有账号，点此</string>
    <string name="login_pwd">请输入密码</string>
    <string name="login_logo">图标</string>
    <string name="login_user">请输入账号/手机号</string>
    <string name="register_user">请输入手机号</string>
    <string name="register_send">获取验证码</string>
    <string name="register_get">请输入验证码</string>
    <string name="register_pwd">请输入密码</string>
    <string name="register_confirm">请再次输入密码</string>
    <string name="register_sc">获取成功</string>
</resources>
